restruct